--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BabylonJs Practise</title>
 </head>
 <body>
-    <canvas id="renderCanvas"></canvas>
+    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <script src="../node_modules/vconsole/dist/vconsole.min.js"></script>
+    <script>
+        // new VConsole();
+    </script>
 </body>
 </html>
